# soccerlite

./: .env.testing  .gitignore  README.md  alembic.ini  justfile  pyproject.toml  tailwind.config.js
app/: __init__.py  __main__.py  cli.py  main.py
app/controllers/: __init__.py  index.py  urls.py  web.py
app/controllers/admin/: __init__.py  fixture.py  league.py  schedule.py  season.py  team.py
app/controllers/iesl/: __init__.py  league.py
app/core/: __init__.py  config.py  log.py  openapi.py  plugin.py  response.py  security.py  static_files.py  toolbox.py
app/db/: __init__.py  base.py  commands.py  db_config.py
app/db/migrations/: env.py  script.py.mako
app/dto/: __init__.py  fixture.py  league.py  schedule.py  season.py  standings.py  team.py  user.py
app/models/: __init__.py  base.py
app/models/auth/: __init__.py  roles.py  user_account.py
app/models/iesl/: __init__.py  fixture.py  fixture_team.py  league.py  schedule.py  season.py  standings.py  team.py
app/services/: __init__.py  base.py  dependencies.py
app/services/account/: user.py
app/services/iesl/: __init__.py  fixture.py  league.py  schedule.py  season.py  standings.py  team.py
app/static/css/: main.css
app/static/tailwind/: input.css
app/templates/: login.html  main.html  main2.html
app/templates/admin/: _ok.html  dashboard.html  sidebar.html
app/templates/admin/partials/: add.html  (+13 more)
app/templates/iesl/: info.html  schedules.html  standings.html
app/templates/shared/: base.html  footer.html  header.html  header2.html  styles.html
tests/: conftest.py  test_health.py
(+2 files in other folders)
