[project]
name = "soccerlite"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mario Munoz",email = "pythonbynight@gmail.com"},
]
dependencies = [
    "litestar[standard]>=2.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "attrs>=23.1.0",
    "sqlalchemy[asyncio]>=2.0.21",
    "alembic>=1.12.0",
    "typer[all]>=0.9.0",
    "aiosqlite>=0.19.0",
    "advanced-alchemy>=0.6.2",
    "litestar-users>=1.2.0",
    "pytailwindcss>=0.2.0",
    "jinja2-fragments>=1.3.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["B", "E", "F", "Q", "W"]

src = ["app", "tests"]
line-length = 88
target-version = "py312"

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Disable autofix for unused imports
unfixable = ["F401"]

# Ignore `E402` (import violations) in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-s"
    ]

[tool.pdm]
distribution = false
[tool.pdm.dev-dependencies]
dev = [
    "pytailwindcss>=0.2.0",
]
test = [
    "pytest>=8.0.2",
]

